--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     </div>
   </section>
 
+  <!-- Arrow to go to top -->
+  <a href="#top" class="back-to-top-button"><i class="fa-light fa-arrow-up fa"></i></a>
+
 
   <!-- Features -->
 
@@ -120,7 +123,7 @@
   <section class="colored-section" id="testimonials">
 
 
-    <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+    <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
 
       <div class="carousel-inner">
 
@@ -266,7 +269,7 @@
 
   </footer>
 
-
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
